# lazier1

./: .gitignore  CMakeLists.txt  README.md
include/lazier/: Expression.hpp  Session.hpp  Variable.hpp  lazier  lazierCommon.hpp  xtensorSupport.hpp
include/lazier/ops/: OperatorCommon.hpp
test/: CMakeLists.txt  classTest.cpp  downloadGTest.cmake.in  lazierTest.cpp  xtensorAssert.hpp
